<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="117dp"
    android:layout_marginTop="@dimen/margin_sixteen"
    android:layout_marginEnd="@dimen/margin_sixteen"
    android:layout_marginStart="@dimen/margin_sixteen"
    android:orientation="horizontal"
    android:background="@drawable/shape"
    tools:context=".MainActivity">



    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="14dp"
        android:layout_marginStart="@dimen/margin_twelve"
        android:layout_marginBottom="@dimen/margin_twelve"
        android:layout_marginTop="@dimen/margin_twelve">

        <ImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:src="@drawable/image"
            android:scaleType="fitXY"
            android:contentDescription="@string/image_of_profile" />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twelve"
        android:layout_marginTop="@dimen/margin_twelve"
        android:layout_marginBottom="11dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_eight"
            android:fontFamily="@font/dm_sans"
            android:textFontWeight="700"
            android:lineHeight="20.83sp"
            android:text="@string/abdulaziz_komity"
            android:textSize="@dimen/size_text_sixteen"
            tools:targetApi="p"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_eight"
            android:alpha="0.87"
            android:fontFamily="@font/dm_sans"
            android:lineHeight="@dimen/size_text_sixteen"
            android:text="@string/eng"
            android:textColor="#122940"
            android:textFontWeight="500"
            android:textSize="@dimen/size_text_twelve"
            tools:targetApi="p" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textFontWeight="400"
            android:fontFamily="@font/dm_sans"
            android:alpha="0.6"
            android:lineHeight="16.93sp"
            android:textSize="13sp"
            android:text="@string/uk"
            android:textColor="#263238"
            tools:targetApi="p"
            app:drawableLeftCompat="@drawable/location"
            android:drawablePadding="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:lineHeight="16sp"
                android:text="@string/reviews"
                android:textColor="#000000"
                android:textFontWeight="400"
                android:textSize="@dimen/size_text_twelve"
                tools:targetApi="p" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_eight"
                android:fontFamily="@font/dm_sans"
                android:text="@string/rate"
                android:textColor="#000000"
                android:textFontWeight="500"
                android:textSize="@dimen/size_text_twelve"
                android:lineHeight="@dimen/size_text_sixteen"
                tools:targetApi="p" />

            <ImageView
                android:layout_width="@dimen/margin_twelve"
                android:layout_height="@dimen/margin_twelve"
                android:src="@drawable/ic_baseline_star_24"
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/icon_star"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginTop="@dimen/margin_twelve"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="@dimen/margin_eight"
        android:orientation="vertical">

        <TextView
            android:layout_width="38dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/margin_eight"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:background="@drawable/button"
            android:textFontWeight="400"
            android:text="@string/hr"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:fontFamily="@font/dm_sans"
            tools:targetApi="p"
            android:lineHeight="@dimen/size_text_twelve"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            android:textSize="@dimen/size_text_twelve"
            android:layout_marginBottom="@dimen/margin_eight"
            android:textFontWeight="500"
            tools:targetApi="p"
            android:lineHeight="@dimen/size_text_sixteen"
            android:layout_gravity="end"
            android:textColor="#122940"
            android:fontFamily="@font/dm_sans"
            android:alpha="0.87"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_ago"
            android:alpha="0.38"
            android:textSize="@dimen/size_text_twelve"
            android:lineHeight="@dimen/size_text_sixteen"
            android:textColor="#000000"
            tools:targetApi="p"
            android:layout_gravity="end"
            android:fontFamily="@font/dm_sans"/>

    </LinearLayout>

</LinearLayout>